--- a/new.html
+++ b/new.html
@@ -10,9 +10,10 @@
     <section class="animation-box">
       <div class="first-text">I LOVE YOU</div>
       <div class="second-text">
-        WILL YOU BE MINE MISS RITIKA?
+        WILL YOU BE MINE MISS ?
       </div>
     </section>
   </body>
 </html>
+
 
